cmake_minimum_required(VERSION 3.10)
project(Cubitr)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)
add_executable(Cubitr cubitr.c)
find_package(Curses REQUIRED)
target_include_directories(Cubitr PRIVATE ${CURSES_INCLUDE_DIRS})
target_compile_options(Cubitr PRIVATE ${CURSES_CFLAGS})
target_link_libraries(Cubitr ${CURSES_LIBRARIES})
if(UNIX)
    target_link_libraries(Cubitr m)
endif()