cmake_minimum_required(VERSION 3.10)
project(Cubitr)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)
add_executable(Cubitr cubitr.c)
find_package(Curses REQUIRED)
add_library(ncurses_static STATIC IMPORTED)
add_definitions(-DNCURSES_STATIC)
set_target_properties(ncurses_static PROPERTIES
        IMPORTED_LOCATION "${CURSES_LIBRARIES}"
    )
include_directories(${CURSES_INCLUDE_DIRS})
target_compile_options(Cubitr PRIVATE ${CURSES_CFLAGS})
target_link_libraries(Cubitr ncurses_static)
if(UNIX)
    target_link_libraries(Cubitr m)
endif()
